[FIX] web: properties field matching group's alignment
This commit fixes the properties field alignment to make it more similar
to the form's group layout (using grid and its gap).

Steps to reproduce:
- Open CRM
- On a lead's form view
- Add properties
=> labels from second column aren't aligned with fields above

--- a/addons/web/static/src/views/fields/properties/properties_field.scss
+++ b/addons/web/static/src/views/fields/properties/properties_field.scss
@@ -1,5 +1,9 @@
 .o_field_properties {
     width: 100%;
+
+    .o_group {
+        gap: map-get($spacers, 2) $o-horizontal-padding * 2;
+    }
 }
 
 // The web client will add a "o_field_invalid" class when the field is considered
